tests/ui/generic-associated-types/assume-gat-normalization-for-nested-goals.stderr
error[E0277]: the trait `Baz<Self>` is not implemented for `i32`
  --> $DIR/assume-gat-normalization-for-nested-goals.rs:6:30
   |
LL |     type Bar<T>: Baz<Self> = i32;
   |                              ^^^ the trait `Baz<Self>` is not implemented for `i32`, which is required by `i32: Baz<Self>`
   |
note: required for `i32` to implement `Baz<Self>`
  --> $DIR/assume-gat-normalization-for-nested-goals.rs:13:23
   |
LL | impl<T: Foo + ?Sized> Baz<T> for i32 where T::Bar<()>: Eq<i32> {}
   |                       ^^^^^^     ^^^                   ------- unsatisfied trait bound introduced here
note: required by a bound in `Foo::Bar`
  --> $DIR/assume-gat-normalization-for-nested-goals.rs:6:18
   |
LL |     type Bar<T>: Baz<Self> = i32;
   |                  ^^^^^^^^^ required by this bound in `Foo::Bar`
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | trait Foo where i32: Baz<Self> {
   |           ++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
